# wallpaper-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cajun-kriegs-wallpaper.cabal  flake.nix
.github/workflows/: ci.yml
app/: Main.hs
