cabal-version:      3.0
name:               cajun-kriegs-wallpaper
version:            0.1.0.0
synopsis:           Download the latest wallpaper from kriegs.net
-- description:
license:            MIT
license-file:       LICENSE
author:             Cajun
maintainer:         27892784+Cajunvoodoo@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cajun-kriegs-wallpaper
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: GHC2021
