cabal-version: 3.0
name: cajun-kriegs-wallpaper
version: 0.1.0.0
synopsis: Download the latest wallpaper from kriegs.net
-- description:
license: MIT
license-file: LICENSE
author: Cajun
maintainer: 27892784+Cajunvoodoo@users.noreply.github.com
-- copyright:
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable cajun-kriegs-wallpaper
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base,
    bytestring,
    data-default,
    req,
    string-interpolate,
    text,
    time,
    unix,

  hs-source-dirs: app
  default-language: GHC2021
  ghc-options:
    -O2

  -- -rtsopts
  -- -with-rtsopts=-N
  -- -threaded
  default-extensions:
    AllowAmbiguousTypes
    Arrows
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    RoleAnnotations
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns
